[project]
name = "2025-p1-bdr159"
version = "0.1.0"
description = ""
authors = [
    {name = "BDR159",email = "60425968+BDR159@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
